--- a/src/views/catalogo.ejs
+++ b/src/views/catalogo.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+        <%- include('partials/head') %>
 </head>
 <body>
+    <%- include('partials/navigation') %>
     <h1>Catalogo</h1>
 </body>
 </html>
